--- a/src/styles/components/_views.scss
+++ b/src/styles/components/_views.scss
@@ -10,8 +10,8 @@
     font-weight: 600;
     color: var(--color-text-primary);
     padding: 0 10px;
-    height: 28px;
-    line-height: 28px;
+    height: 24px;
+    line-height: 24px;
     background: rgba(0,0,0,0.25);
     border-radius: 4px;
     border: 1px solid var(--color-border);
