--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -23,7 +23,7 @@
     --axis-width:             56px;
     --waveform-height:        100px;
     --spectrogram-height:     200px;
-    --toolbar-height:         40px;
+    --toolbar-height:         34px;
     --statusbar-height:       24px;
     --sidebar-width:          300px;
     --sidebar-right-width:    300px;
